--- a/src/index.html
+++ b/src/index.html
@@ -1,35 +1,48 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" href="./assets/img/4geeks.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello Rigo with Vanilla.js</title>
 
-    <!-- Fontawesome is our recomended library for icons -->
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
-      integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
-      crossorigin="anonymous"
-    />
-  </head>
-  <body>
-    <!-- Write your HTML code here, you can delete everything withing the body tags -->
-    <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
-      <img src="./assets/img/rigo-baby.jpg" />
-      <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
-      </p>
-      <div class="fixed-bottom p-4">
-        Made with ❤️ by
-        <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" href="./assets/img/4geeks.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Domain Name Generator</title>
+
+  <!-- Fontawesome is our recomended library for icons -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
+    integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous" />
+</head>
+
+<body>
+  <!-- Card -->
+  <div class="container-fluid text-center">
+    <div class="row">
+      <div class="col">
+        <div class="pt-5">
+          <div class="card text-center">
+            <div class="card-header">
+              Gen V0.1.2
+            </div>
+            <div class="card-body">
+              <h5 class="h1 card-title">Domain Name Generator</h5>
+              <p class="card-text fs-3 font-monospace text-decoration-underline " id="domain">Hola como estas</p>
+              <button class="btn btn-outline-success" id="reload">Not enough?</button>
+              <!-- Footer -->
+            </div>
+            <div class="card-footer text-muted">
+              🥳🥳🥳🥳
+            </div>
+          </div>
+        </div>
       </div>
     </div>
+    <div class="fixed-bottom p-4">
+      Don't Reject ❤️
+      <a href="https://app.slack.com/client/T0BFXMWMV/D09A9UNSBFX?selected_team_id=T0BFXMWMV">Jose</a>
+    </div>
+  </div>
 
-    <!-- Do not delete this script tag, this is what connects your HTML with the Javascript code -->
-    <script type="module" src="/app.js"></script>
-  </body>
+  <!-- Do not delete this script tag, this is what connects your HTML with the Javascript code -->
+  <script type="module" src="/app.js"></script>
+</body>
+
 </html>
