--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,8 @@
             </div>
             <div class="card-body">
               <h5 class="h1 card-title">Domain Name Generator</h5>
-              <p class="card-text fs-3 font-monospace text-decoration-underline " id="domain">Hola como estas</p>
+              <p class="card-text fs-3 font-monospace text-decoration-underline " id="domain">hola
+              </p>
               <button class="btn btn-outline-success" id="reload">Not enough?</button>
               <!-- Footer -->
             </div>
