eliminando math ramdom y listando en app.js

--- a/src/index.html
+++ b/src/index.html
@@ -24,9 +24,7 @@
             </div>
             <div class="card-body">
               <h5 class="h1 card-title">Domain Name Generator</h5>
-              <p class="card-text fs-3 font-monospace text-decoration-underline " id="domain">hola
-              </p>
-              <button class="btn btn-outline-success" id="reload">Not enough?</button>
+              <div id="domain">hola</div>
               <!-- Footer -->
             </div>
             <div class="card-footer text-muted">
